# BLD-Django-Tasks

./: .gitignore  README.md  RESULTS.md  db.sqlite3  filters.py  fixtuers.py  pyproject.toml  pytest.ini  test_fixtures.py
albums/: admin.py  form.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_creation_datetime.py  0002_initial.py  0003_alter_album_creation_datetime.py  0004_alter_album_creation_datetime.py  0005_album_propriet_alter_album_creation_datetime.py  0005_alter_album_creation_datetime.py  0006_alter_album_creation_datetime.py  0007_alter_album_creation_datetime.py  0008_alter_album_creation_datetime.py  0009_alter_album_creation_datetime.py  0010_alter_album_creation_datetime.py  0011_alter_album_creation_datetime_alter_album_propriet.py  0012_alter_album_creation_datetime_alter_album_propriet.py  0013_alter_album_creation_datetime.py  0014_alter_album_creation_datetime.py  0015_alter_album_creation_datetime_song.py  0016_alter_album_creation_datetime_alter_song_table.py  0017_alter_album_creation_datetime.py  0018_alter_album_creation_datetime.py  0019_alter_album_creation_datetime.py  0020_alter_album_creation_datetime.py  0021_alter_album_creation_datetime.py  0022_alter_album_creation_datetime.py  (+6 more)
artists/: admin.py  forms.py  models.py  serializer.py  serializers.py  urls.py  views.py
authentication/: serializers.py  urls.py  views.py
musicplatform/: celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  permission.py  serializers.py  urls.py  views.py
(+11 files in other folders)
