[tool.poetry]
name = "task-1"
version = "0.1.0"
description = ""
authors = ["Ahmed El-Zahaby <ahmedelzahaby8122000@gmail.com>"]
readme = "README.md"
packages = [{include = "task_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pytz = "^2022.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
